{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "9b7c3795-2ecf-4c3e-9be1-b3fa6db696b8",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "61ee67a4-1205-4e7a-9391-3ff5e0496fd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSelection1",
                    "type": "Button",
                    "id": "a756ec60-ed62-4d37-aa4e-e87488cbdcdf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSelection2",
                    "type": "Button",
                    "id": "e49cf91d-058e-44a4-b479-92b69b6bf2a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSelection3",
                    "type": "Button",
                    "id": "20167f1c-4285-4e0c-a10c-0e6c5d09b968",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSelection4",
                    "type": "Button",
                    "id": "4df70b6e-b9d7-45ff-8fda-292b89e5a2cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "d5440216-eae0-40c3-9d4e-af4463ec4f45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldShoot",
                    "type": "PassThrough",
                    "id": "45a4d9e6-902b-42ad-bba6-035ac84cfa22",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "da6a1ba3-5627-47cf-9551-9ab0b7045276",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "cb29bebd-c8f0-41cc-9ea2-d4d02da58082",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "74885bb0-53f5-4a8b-a5c5-b7636344d392",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "933ca8ae-1ccc-453f-891c-0ba1ca21268f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "faf82b9a-9cb2-4041-ad15-1006fe92cce0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "PassThrough",
                    "id": "63fa140e-470b-4daa-ae03-ca66b1b01297",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "PassThrough",
                    "id": "fd5ba6dc-e51a-4040-af28-c4dc0d5f7239",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "f0dd6be9-2299-4d2a-8594-9d0d62e989c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Info",
                    "type": "Button",
                    "id": "eda069cf-a5a4-4861-8f64-46ed7b94fb63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "83f68b77-bce9-4433-baa1-fef6581c4dc7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95e866db-405d-4e1e-b751-4439ede268c0",
                    "path": "<Keyboard>/1",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "WeaponSelection1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb3b4764-bc93-48e6-ad60-db4e2c3ce982",
                    "path": "<Keyboard>/2",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "WeaponSelection2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9244d21-5f90-4543-ad24-5339d2267c96",
                    "path": "<Keyboard>/3",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "WeaponSelection3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3083a99-c395-4792-8dfe-d8ae8aa9ab63",
                    "path": "<Keyboard>/4",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "WeaponSelection4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1944d177-fcb1-450d-aa30-b04b3cb9e129",
                    "path": "<Keyboard>/r",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a92a20c3-7c30-49db-b657-c875ae760a14",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "HoldShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88ed4fa6-af7d-4605-b88b-cf733b8329e5",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "f8a543cd-614d-4a4d-a091-0d7cd5fd107f",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9bcbb67d-dc82-43c4-b0be-def8841e3f15",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9123275f-0627-43ad-9a90-800fee6025f5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bead0c6a-9d9a-41b4-ba80-9d548a3a1bdb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1d2822b0-7d13-4257-b30f-020bbc7215da",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "d0de34ac-8a3f-4c06-86db-9b8b2c66c7e2",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "552a4c2e-bcdf-47fd-b1fe-3e5d52c758d4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "72ccf94b-fbe6-430f-8fcb-28a447fc73ea",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f503e3c5-4790-4142-b8a0-6798f751a405",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "15fefb60-2452-466a-9201-69537fae88d4",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd272f80-55de-4eae-a898-290e48eb4b99",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=0.05,y=0.05)",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcc3cf1f-1373-4cce-a321-1412cc20199f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),StickDeadzone,ScaleVector2(x=300,y=300)",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "244c1ab9-c89f-46c1-b24b-69f3578181ac",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9324f654-bcf4-4825-9917-b3b9dad3864d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59270782-f7b2-48e6-9ac2-3cbbe49843be",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ae8eeb6-6756-44d8-8458-247689fb72d8",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dbb494e-78b8-4a7d-b912-b2eddcd58b6a",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f04be5a-734f-4efb-93f0-43a13e58a564",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "133edb89-e4d4-4f46-8ecb-8f5daef0e263",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "766667c2-9c49-47db-9918-57d4101c77b5",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Info",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MachineGun",
            "id": "c0649b77-f47b-4880-97b5-70ac311511d5",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "e5eea988-c2c6-45ed-a2a4-bd8d5e769760",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldShoot",
                    "type": "PassThrough",
                    "id": "d050b1d1-ae1c-4319-85dc-a7559986dcc0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "00928da7-c0e2-411f-80aa-a6acc669bd8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cd8f334c-4bb2-4714-870f-1fd53b25d4d1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05ff8420-993e-4eb2-a14d-e89a47cc0613",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "HoldShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b5a51a7-43db-46f8-bb21-eb7554c50a00",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Global",
            "id": "17291687-e813-452a-871a-275cbc0099c6",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "d2db73bf-25ab-4345-ad2f-c2e4bb108ad2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a003aa22-cef7-4dd0-ad8b-0a09dd329516",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}